add programs post type to replace coaching page

--- a/assets/scss/components/_hero.scss
+++ b/assets/scss/components/_hero.scss
@@ -50,7 +50,7 @@
   }
 }
 
-.page-template-template-coaching #breakthrough {
+.single-programs #breakthrough {
   border-bottom: 1px solid $medium-gray;
 
   @include breakpoint(large) {
