--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -69,3 +69,4 @@ CSS file.
 @import 'components/header';
 @import 'components/hero';
 @import 'components/blog';
+@import 'components/program-feature';
