--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2726,7 +2726,7 @@ FOOTER STYLES
   padding-top: 1rem;
   background-color: #f1f1f1;
   border-top: 1px dotted #b8b8b8;
-  text-shadow: 1px 1px  #fff; }
+  text-shadow: 1px 1px #fff; }
 
 .copyright {
   font-size: 80%;
@@ -2930,16 +2930,16 @@ nav {
   .home .hero {
     height: 30rem; } }
 
-.page-template-template-coaching #breakthrough {
+.single-programs #breakthrough {
   border-bottom: 1px solid #b8b8b8; }
   @media screen and (min-width: 64em) {
-    .page-template-template-coaching #breakthrough {
+    .single-programs #breakthrough {
       position: relative;
       background-image: url("../images/bg1.jpg");
       background-repeat: no-repeat;
       background-size: cover;
       background-position: 0 -170.6px; }
-      .page-template-template-coaching #breakthrough .inner-hero {
+      .single-programs #breakthrough .inner-hero {
         background-color: rgba(255, 255, 255, 0.25); } }
 
 .hero {
@@ -3006,3 +3006,69 @@ nav {
   padding: 0 0 1rem !important; }
   .page-navigation .current-title {
     padding: 0.25rem .5rem; }
+
+.program-feature {
+  padding: 2rem 0 1.5rem; }
+
+.program-feature--background {
+  background-color: #f1f1f1;
+  border-top: 1px dotted #b8b8b8;
+  border-bottom: 1px dotted #b8b8b8; }
+
+@media screen and (min-width: 64em) {
+  .program-feature-container {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center; } }
+
+.program-feature-image {
+  margin: 0 0 0.75rem; }
+  @media screen and (min-width: 64em) {
+    .program-feature-image {
+      -webkit-flex: 0 0 auto;
+      -ms-flex: 0 0 auto;
+      flex: 0 0 auto;
+      margin: 0; } }
+  .program-feature-image img {
+    border-radius: 50%;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    width: 150px; }
+    @media screen and (min-width: 40em) {
+      .program-feature-image img {
+        width: 250px; } }
+    @media screen and (min-width: 64em) {
+      .program-feature-image img {
+        width: 300px; } }
+
+.program-feature-content {
+  max-width: 31.5rem;
+  margin: 0 auto; }
+  @media screen and (min-width: 64em) {
+    .program-feature-content {
+      -webkit-flex: 1 1 auto;
+      -ms-flex: 1 1 auto;
+      flex: 1 1 auto;
+      margin: 0;
+      max-width: 33rem;
+      padding-left: 1.5rem; } }
+  @media screen and (min-width: 64em) {
+    .program-feature-content {
+      max-width: 31.5rem; } }
+
+.program-feature-title {
+  margin: 0 0 1rem !important;
+  text-align: center; }
+  @media screen and (min-width: 40em) {
+    .program-feature-title {
+      margin: 0 0 1.5rem !important; } }
+  @media screen and (min-width: 64em) {
+    .program-feature-title {
+      text-align: left;
+      margin: 0 0 1rem !important; } }
+  .program-feature-title a {
+    padding-bottom: 0.125rem;
+    border-bottom: 1px dotted #b8b8b8;
+    font-weight: 300; }
